# sponge-networks

./: .envrc  .gitignore  LICENSE  README.md  Taskfile.yml  __init__.py.old  flake.nix  pyproject.toml
doc/: doc.html
docker/: Dockerfile  docker-compose.yaml  instruction.md
docker/jupyter-config/: jupyter_notebook_config.py.txt
jupyter/: doc.ipynb  network_main.ipynb  sponge_presentation_05.02.23.ipynb
sponge_networks/: __init__.py  display.py  network_manipulation.py  quotient.py  resource_networks.py  sponge_networks.py  utils.py
sponge_networks/utils/: __init__.py  utils.py
tests/: __init__.py  all_tests.py  test_all.py
tests/data/: g1.xlsx  g2.xlsx
