[tool.poetry]
name = "sponge-networks"
version = "0.5.0"
description = "a generalization of the resource network model with greedy vertices"
authors = ["heinwol <koreshkovhw@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "sponge_networks" }]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.0"
scipy = "^1.11.1"
pandas = "^2.0.3"
sympy = "^1.12"
networkx = "^3.1"
pydot = "^1.4.2"
toolz = "^0.12.0"
array-to-latex = "^0.91"
ipython = "^8.14.0"
ipywidgets = "^8.0.7"
typing-extensions = "^4.7.1"
openpyxl = "^3.1.2"
typeguard = "^4.0.0"
pygraphviz = "^1.11"
returns = "^0.22.0"
expression = "^5.0.2"
svgpathtools = "^1.6.1"
cairosvg = "^2.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^24.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
nbmake = "^1.5.0"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
allow_redefinition = true
# allow_untyped_globals = true
ignore_missing_imports = true
disallow_untyped_calls = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
